fix: tabs no longer overflow text

--- a/app/ui/css/browser-tabs.css
+++ b/app/ui/css/browser-tabs.css
@@ -3,10 +3,13 @@
   background: linear-gradient(to bottom, #ddd 90%, #bbb);
   font-size: 13px;
   -webkit-app-region: drag;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
 }
 #browser-tabs > div {
   -webkit-app-region: no-drag;
   flex: 1;
+  display: flex;
   background: linear-gradient(to bottom, #ddd 90%, #bbb);
   color: #777;
   border-top: 1px solid #ccc;
@@ -24,8 +27,10 @@
   color: #555;
 }
 #browser-tabs > div > span {
-  display: inline-block;
-  padding: 6px 4px 4px 12px;
+  flex: 1;
+  padding: 6px 0 4px 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 #browser-tabs > div > span > i {
   margin-left: 5px;
